apps/base/redlib/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redlib
  labels:
    k8s.dimarco-server.site/scrape: "true"
    goldilocks.fairwinds.com/enabled: "true"
