apps/base/redlib/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib-svc
spec:
  selector:
    app: redlib
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redlib-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
    # Required for Redlib when proxying through NGINX (see issue #122)
spec:
  ingressClassName: traefik
  rules:
    - host: "redlib.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redlib-svc
                port:
                  name: http
  tls:
    - hosts:
        - "redlib.dimarco-server.site"
      secretName: redlib-tls
